# ToolUniverse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.githooks/: pre-commit
.github/: euhealth-cache-refresh.yml
.github/workflows/: PYPI_SETUP.md  README.md  deploy-docs.yml  docs.yml  euhealth-cache-refresh.yml  publish-pypi.yml  tests.yml
docs/: api_comprehensive.rst  api_quick_reference.rst  conf.py  contributing.rst  faq.rst  getting_started.rst  index.rst  quick_build_zh.sh  quick_doc_build.sh  requirements.txt
docs/_static/: custom.css  language_switcher.css  language_switcher.js  pydata_custom.css
docs/about/: license.rst
docs/api/: tooluniverse.agentic_tool.rst  tooluniverse.base_tool.rst  tooluniverse.chem_tool.rst  tooluniverse.ctg_tool.rst  tooluniverse.data.fda_drugs_with_brand_generic_names_for_tool.rst  tooluniverse.data.rst  tooluniverse.dataset_tool.rst  tooluniverse.efo_tool.rst  tooluniverse.enrichr_tool.rst  tooluniverse.europe_pmc_tool.rst  tooluniverse.execute_function.rst  tooluniverse.graphql_tool.rst  tooluniverse.humanbase_tool.rst  tooluniverse.mcp_client_tool.rst  tooluniverse.openalex_tool.rst  tooluniverse.openfda_adv_tool.rst  tooluniverse.openfda_tool.rst  tooluniverse.pubtator_tool.rst  tooluniverse.restful_tool.rst  tooluniverse.rst  tooluniverse.semantic_scholar_tool.rst  tooluniverse.utils.rst
docs/expand_tooluniverse/: advanced_tool_development.rst  architecture.rst  index.rst  local_tool_registration.rst
docs/guide/: ODPHPtools_tutorial.md  clinical_guidelines_tools.rst  compact_mode.rst  index.rst  listing_tools.rst  loading_tools.rst  mcp_support.rst  openrouter_support.rst  streaming_tools.rst  tool_caller.rst  toolspace.rst  vllm_support.rst
docs/old_files/: I18N_GUIDE.md  README.md  (+15 more)
examples/: README.md  admetai_tool_example.py  agentic_streaming_example.py  agentic_tool_example.py  alphafold_tool_example.py  azure_openai_models_example.py  blast_sequence_search.py  cbioportal_cancer_data.py  cdc_tool_example.py  cellosaurus_tool_example.py  chem_tool_example.py  claude_sdk_example.py  claude_sdk_examples.py  clinical_guidelines_demo.py  clinvar_tools_usage.py  coding_api_example.py  custom_tool_validation_example.py  dailymed_example.py  dataset_tool_example.py  dbsnp_tools_usage.py  disease_target_score_example.py  drugbank_filter_example.py  efo_example.py  emdb_cryo_em_structures.py  enrichr_tool_example.py  ensembl_tools_usage.py  europe_pmc_tool_example.py  fda_adv_example.py  fda_drug_labeling_example.py  function_calling_example.py  gene_ontology_tools_example.py  geo_tools_usage.py  global_fallback_example.py  gnomad_tools_usage.py  gtopdb_pharmacology.py  gwas_tool_example.py  health_disparities_example.py  hooks_direct_example.py  hooks_example.py  hooks_exclude_tools_example.py  (+43 more)
scripts/: build_tools.py
tests/: README.md  conftest.py  test_agentic_streaming_integration.py  test_agentic_tool_azure_models.py  test_agentic_tool_env_vars.py  test_api_key_validation.py  test_cellosaurus_tool.py  test_compose_tool.py  test_guideline_tools.py  test_literature_tools.py  test_nice_guidelines_tool.py  test_paper_search_tools.py  test_streaming_support.py
web/: tool_relationship_graph_FINAL.json  v5_all_tools_final.json
(+1386 files in other folders)
